--- a/index.html
+++ b/index.html
@@ -29,8 +29,15 @@
         <h1>Nisheet Karan</h1>
         <h3>And I'm a <span class="multiple-text"></span></h3>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis,
-          accusantium?
+          <br />
+          I am an experienced full stack developer with a passion for designing
+          and developing web applications. Proficient in HTML, CSS, and
+          JavaScript, I create visually appealing and interactive user
+          interfaces using frameworks like React. <br /><br />
+          On the back-end, I work with technologies like Node.js, along with
+          databases such as MySQL and MongoDB. Committed to delivering
+          exceptional web experiences, I am excited about contributing my skills
+          to innovative projects.
         </p>
 
         <div class="social-media">
@@ -55,136 +62,169 @@
       <div class="about-content">
         <h2 class="heading">About <span>Me</span></h2>
         <h3>FullStack Developer!</h3>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam esse
-          repudiandae dolorem beatae quidem autem quibusdam eligendi ab! Tempora
-          mollitia totam pariatur aliquam repellendus quis eveniet deleniti.
-          Aliquam quaerat eaque soluta iusto veritatis cumque earum, labore
-          maiores voluptatibus sed vero fugiat. Impedit a doloribus aliquid
-          quae.
+        <p align="justify">
+          I am a final year student studying at IIIT Guwahati, I am actively
+          searching for a Software Development Engineer (SDE) position to launch
+          my career in the tech industry. With a strong passion for programming
+          and problem-solving, I am eager to apply my knowledge and skills in a
+          professional setting. Throughout my academic journey, I have gained a
+          solid foundation in computer science, software engineering principles,
+          and practical experience through various projects and internships.
+          <br />
+          I have gained expertise in programming languages such as Java, C++,
+          Python, and have learned to develop efficient algorithms and data
+          structures. Additionally, courses in databases, operating systems, and
+          computer networks have equipped me with a holistic understanding of
+          the software development lifecycle.
         </p>
-        <a href="#" class="btn">Read More</a>
+        <a href="#" class="btn">Know More</a>
       </div>
     </section>
 
     <section class="services" id="services">
-        <h2 class="heading">Our <span>Services</span></h2>
-        <div class="services-container">
-            <div class="services-box">
-                <i class='bx bx-code-alt'></i>
-                <h3>Web Developement</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                    Nostrum blanditiis aspernatur unde consectetur mollitia tempora 
-                    asperiores explicabo officia, aliquid eum?
-                </p>
-                <a href="#" class="btn">Read More</a>
-            </div>
-            <div class="services-box">
-                <i class='bx bxs-paint' ></i>
-                <h3>Graphic Design</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                    Nostrum blanditiis aspernatur unde consectetur mollitia tempora 
-                    asperiores explicabo officia, aliquid eum?
-                </p>
-                <a href="#" class="btn">Read More</a>
-            </div>
-            <div class="services-box">
-                <i class='bx bx-data' ></i>
-                <h3>Backend Dev</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                    Nostrum blanditiis aspernatur unde consectetur mollitia tempora 
-                    asperiores explicabo officia, aliquid eum?
-                </p>
-                <a href="#" class="btn">Read More</a>
-                
-            </div>
+      <h2 class="heading">Our <span>Services</span></h2>
+      <div class="services-container">
+        <div class="services-box">
+          <i class="bx bx-code-alt"></i>
+          <h3>Front-End Dev</h3>
+          <p>
+            As a Front-end Developer, I create engaging and intuitive user
+            interfaces that enhance the client's web experience through
+            innovative design and seamless functionality.
+          </p>
+          <a href="#" class="btn">Know More</a>
         </div>
+        <div class="services-box">
+          <i class="bx bxs-paint"></i>
+          <h3>Graphic Design</h3>
+          <p>
+            As a Graphic Designer, I bring ideas to life through visually
+            captivating designs that effectively communicate your brand's
+            message and capture your target audience's attention.
+          </p>
+          <a href="#" class="btn">Know More</a>
+        </div>
+        <div class="services-box">
+          <i class="bx bx-data"></i>
+          <h3>Back-End Dev</h3>
+          <p>
+            As a Backend Developer, I develop and manage the server-side of web
+            applications, ensuring seamless data processing, robust
+            functionality, and secure server operations.
+          </p>
+          <a href="#" class="btn">Know More</a>
+        </div>
+      </div>
     </section>
 
     <section class="portfolio" id="portfolio">
-        <h2 class="heading">Latest <span>Project</span></h2>
-        <div class="portfolio-container">
-            <div class="portfolio-box">
-                <img src="Images/portfolio1.jpg" alt="">
-                <div class="portfolio-layer">
-                    <h4>Web Design</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo, exercitationem.</p>
-                    <a href="#"><i class='bx bx-link-external' ></i></a>
-                </div>
-            </div>
-
-            <div class="portfolio-box">
-                <img src="Images/portfolio2.jpg" alt="">
-                <div class="portfolio-layer">
-                    <h4>Web Design</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo, exercitationem.</p>
-                    <a href="#"><i class='bx bx-link-external' ></i></a>
-                </div>
-            </div>
-
-            <div class="portfolio-box">
-                <img src="Images/portfolio3.jpg" alt="">
-                <div class="portfolio-layer">
-                    <h4>Web Design</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo, exercitationem.</p>
-                    <a href="#"><i class='bx bx-link-external' ></i></a>
-                </div>
-            </div>
-
-            <div class="portfolio-box">
-                <img src="Images/portfolio4.jpg" alt="">
-                <div class="portfolio-layer">
-                    <h4>Web Design</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo, exercitationem.</p>
-                    <a href="#"><i class='bx bx-link-external' ></i></a>
-                </div>
-            </div>
-
-            <div class="portfolio-box">
-                <img src="Images/portfolio5.jpg" alt="">
-                <div class="portfolio-layer">
-                    <h4>Web Design</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo, exercitationem.</p>
-                    <a href="#"><i class='bx bx-link-external' ></i></a>
-                </div>
-            </div>
-
-            <div class="portfolio-box">
-                <img src="Images/portfolio6.jpg" alt="">
-                <div class="portfolio-layer">
-                    <h4>Web Design</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo, exercitationem.</p>
-                    <a href="#"><i class='bx bx-link-external' ></i></a>
-                </div>
-            </div>  
+      <h2 class="heading">Latest <span>Project</span></h2>
+      <div class="portfolio-container">
+        <div class="portfolio-box">
+          <img src="Images/portfolio1.jpg" alt="" />
+          <div class="portfolio-layer">
+            <h4>Web Design</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo,
+              exercitationem.
+            </p>
+            <a href="#"><i class="bx bx-link-external"></i></a>
+          </div>
         </div>
+
+        <div class="portfolio-box">
+          <img src="Images/portfolio1.jpg" alt="" />
+          <div class="portfolio-layer">
+            <h4>Web Design</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo,
+              exercitationem.
+            </p>
+            <a href="#"><i class="bx bx-link-external"></i></a>
+          </div>
+        </div>
+
+        <div class="portfolio-box">
+          <img src="Images/portfolio1.jpg" alt="" />
+          <div class="portfolio-layer">
+            <h4>Web Design</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo,
+              exercitationem.
+            </p>
+            <a href="#"><i class="bx bx-link-external"></i></a>
+          </div>
+        </div>
+
+        <div class="portfolio-box">
+          <img src="Images/portfolio1.jpg" alt="" />
+          <div class="portfolio-layer">
+            <h4>Web Design</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo,
+              exercitationem.
+            </p>
+            <a href="#"><i class="bx bx-link-external"></i></a>
+          </div>
+        </div>
+
+        <div class="portfolio-box">
+          <img src="Images/portfolio1.jpg" alt="" />
+          <div class="portfolio-layer">
+            <h4>Web Design</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo,
+              exercitationem.
+            </p>
+            <a href="#"><i class="bx bx-link-external"></i></a>
+          </div>
+        </div>
+
+        <div class="portfolio-box">
+          <img src="Images/portfolio1.jpg" alt="" />
+          <div class="portfolio-layer">
+            <h4>Web Design</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo,
+              exercitationem.
+            </p>
+            <a href="#"><i class="bx bx-link-external"></i></a>
+          </div>
+        </div>
+      </div>
     </section>
 
     <section class="contact" id="contact">
-        <h2 class="heading">Contact <span>Me!</span></h2>
-        <form action="#">
-            <div class="input-box">
-                <input type="text" placeholder="Full Name">
-                <input type="email" placeholder="Email Address">
-            </div>
+      <h2 class="heading">Contact <span>Me!</span></h2>
+      <form action="#">
+        <div class="input-box">
+          <input type="text" placeholder="Full Name" />
+          <input type="email" placeholder="Email Address" />
+        </div>
 
-            <div class="input-box">
-                <input type="number" placeholder="Mobile Number">
-                <input type="text" placeholder="Email Subject">
-            </div>
-            <textarea name="" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
-            <input type="submit" value="Send Message" class="btn">
-        </form>
+        <div class="input-box">
+          <input type="number" placeholder="Mobile Number" />
+          <input type="text" placeholder="Email Subject" />
+        </div>
+        <textarea
+          name=""
+          id=""
+          cols="30"
+          rows="10"
+          placeholder="Your Message"
+        ></textarea>
+        <input type="submit" value="Send Message" class="btn" />
+      </form>
     </section>
 
     <footer class="footer">
-        <div class="footer-text">
-            <p>Copyright &copy; 2023 by Nisheet | All Rights Reserved. </p>
-        </div>
+      <div class="footer-text">
+        <p>Copyright &copy; 2023 by Nisheet | All Rights Reserved.</p>
+      </div>
 
-        <div class="footer-iconTop">
-            <a href="#home"><i class='bx bx-chevrons-up' ></i></a>
-        </div>
+      <div class="footer-iconTop">
+        <a href="#home"><i class="bx bx-chevrons-up"></i></a>
+      </div>
     </footer>
 
     <!-- typed js -->
